--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,131 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/button_1"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_1"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="225dp" />
 
+    <Button
+        android:id="@+id/button_2"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_2"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="225dp" />
+
+    <Button
+        android:id="@+id/button_3"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_3"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="225dp" />
+
+    <Button
+        android:id="@+id/button_4"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_4"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="297dp" />
+
+    <Button
+        android:id="@+id/button_5"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_5"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="297dp" />
+
+    <Button
+        android:id="@+id/button_6"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_6"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="297dp" />
+
+    <Button
+        android:id="@+id/button_7"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_7"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="365dp" />
+
+    <Button
+        android:id="@+id/button_8"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_8"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="365dp" />
+
+    <Button
+        android:id="@+id/button_9"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_9"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="365dp" />
+
+    <Button
+        android:id="@+id/button_0"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_0"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="435dp" />
+
+    <Button
+        android:id="@+id/button_period"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/button_period"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="435dp" />
+
+    <Button
+        android:id="@+id/button_equal"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/operation_button_equal"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="435dp" />
+
+    <Button
+        android:id="@+id/button_plus"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/operation_button_plus"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="225dp" />
+
+    <Button
+        android:id="@+id/button_minus"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/operation_button_minus"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="297dp" />
+
+    <Button
+        android:id="@+id/button_multiplication"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/operation_button_multiplication"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="365dp" />
+
+    <Button
+        android:id="@+id/button_division"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/operation_button_division"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="435dp" />
 </android.support.constraint.ConstraintLayout>
